--- a/endings.html
+++ b/endings.html
@@ -4,37 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isaac Endings</title>
+    <style>
+        * {
+            font-family: Helvetica, sans-serif;
+            color: rgb(209, 209, 209);
+        }
+
+        body {
+            background-image: url("img/Site-background-dark.webp");
+        }
+
+        .logo_text {
+            text-decoration: none;
+        }
+
+        .logo_text :hover{
+            text-decoration: dashed white;
+        }
+
+        main {
+            min-height: calc(100vh - 10px - 160px);
+            background-color: rgba(0, 0, 0, 0.7);
+        }
+
+        footer {
+            background-color: black;
+            margin-top: 0;
+            margin-bottom: -10px;
+            padding-bottom: 5px;
+            height: 4em;
+            text-align: center;
+        } 
+    </style>
 </head>
 <body>
-    <header>
-        <h1>The Binding of Isaac: Endings</h1>
-        <nav>
-            <a href="#ending1">Ending 1</a>  
-            <a href="#ending2">Ending 2</a>  
-            <a href="#ending3">Ending 3</a>  
-            <a href="#ending4">Ending 4</a>  
-            <a href="#ending5">Ending 5</a>  
-            <a href="#ending6">Ending 6</a>  
-            <a href="#ending7">Ending 7</a> 
-            <a href="#ending8">Ending 8</a>  
-            <a href="#ending9">Ending 9</a>  
-            <a href="#ending10">Ending 10</a> 
-            <a href="#ending11">Ending 11</a>  
-            <a href="#ending12">Ending 12</a>
-            <a href="#ending13">Ending 13</a>
-            <a href="#ending14">Ending 14</a>
-            <a href="#ending15">Ending 15</a>
-            <a href="#ending16">Ending 16</a>
-            <a href="#ending17">Ending 17</a>
-            <a href="#ending18">Ending 18</a>
-            <a href="#ending19">Ending 19</a>
-            <a href="#ending20">Ending 20</a>
-            <a href="#ending21">Ending 21</a>
-            <a href="#finalEnding">Final Ending (Dogma & The Beast Ending)</a>
-        </nav>
+    <header class="logo">
+        <a href="index.html">
+            <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
+        </a>
+        <a href="index.html" class="logo_text">The Binding of Isaac:Rebirth Wiki</a>
     </header>
 
     <main>
+        <section>
+            <h1>The Binding of Isaac: Endings</h1>
+            <nav>
+                <a href="#ending1">Ending 1</a>
+                <a href="#ending2">Ending 2</a>
+                <a href="#ending3">Ending 3</a>
+                <a href="#ending4">Ending 4</a>
+                <a href="#ending5">Ending 5</a>
+                <a href="#ending6">Ending 6</a>
+                <a href="#ending7">Ending 7</a>
+                <a href="#ending8">Ending 8</a>
+                <a href="#ending9">Ending 9</a>
+                <a href="#ending10">Ending 10</a>
+                <a href="#ending11">Ending 11</a>
+                <a href="#ending12">Ending 12</a>
+                <a href="#ending13">Ending 13</a>
+                <a href="#ending14">Ending 14</a>
+                <a href="#ending15">Ending 15</a>
+                <a href="#ending16">Ending 16</a>
+                <a href="#ending17">Ending 17</a>
+                <a href="#ending18">Ending 18</a>
+                <a href="#ending19">Ending 19</a>
+                <a href="#ending20">Ending 20</a>
+                <a href="#ending21">Ending 21</a>
+                <a href="#finalEnding">Final Ending (Dogma &amp; The Beast Ending)</a>
+            </nav>
+        </section>
+
         <section>
             <h2 id="ending1">Ending 1 (Mom's Heart Ending 1)</h2>
             <p>Isaac opens and falls into the chest, which closes, locking him inside. The chest rattles a few times, and then a bright light comes out of it. Isaac then emerges from it as Eden, switching hairstyles as it does every time you spend an Eden Token. This unlocks said character, who has randomized starting items and stats.</p>
@@ -141,7 +180,7 @@
         </section>
 
         <section>
-            <h2 id="finalEnding">Final Ending (Dogma & The Beast Ending)</h2>
+            <h2 id="finalEnding">Final Ending (Dogma &amp; The Beast Ending)</h2>
             <p>After defeating The Beast, the sky cracks open as a beam of light smites the monster, sending it sinking into the lake of lava. Isaac then ascends into the beam, as recollections of past events play back; his Mom mourning her son's death, his Mom and Dad arguing, his Dad leaving without saying goodbye, his Dad stealing money from Mom's purse while she sleeps, and the restless nights Isaac endured overhearing his parents arguing, believing he was the cause. He then feels his fear and worries fall from his being, his ascent growing faster while ??? and The Lost fall from him. He sees his only companion, Guppy, his Mom and Dad loving each other, his Mother kissing him on the head as he falls asleep, and his own birth. Then, Isaac sees nothing.</p>
             <p>Isaac's Dad interjects, asking Isaac if he really wants the story to end like this and telling him that since he's the one writing it, it doesn't have to end this way. Isaac's Dad asks Isaac if he wants to make a new ending to the story — perhaps even a happy one. Isaac says okay, and his father begins the opening narration again, but with Isaac living with both of his parents instead of just his mother, as the screen fades to black and the credits appear.</p>
         </section>
