--- a/index.html
+++ b/index.html
@@ -7,48 +7,150 @@
     <style>
         * {
             font-family: Helvetica, sans-serif;
+            color: rgb(209, 209, 209);
         }
+
+        body {
+            background-image: url("img/Site-background-dark.webp");
+        }
+
+        .logo_text {
+            text-decoration: none;
+        }
+
+        .logo_text :hover{
+            text-decoration: dashed white;
+        }
+
         main {
             min-height: calc(100vh - 10px - 160px);
+            background-color: rgba(0, 0, 0, 0.7);
         }
 
         footer {
+            background-color: black;
             margin-top: 0;
             margin-bottom: -10px;
             padding-bottom: 5px;
-            height: 10px;
+            height: 4em;
             text-align: center;
         } 
     </style>
 </head>
 <body>
-    <header>
-        <h1>Main Title</h1>
-        <a href="#content1">something1</a> <br>
-        <a href="#content2">something2</a> <br>
-        <a href="#content3">something3</a> <br>
-        <a href="#content4">something4</a> <br>
-    </header> 
-    <main>
+    <header class="logo">
+        <a href="index.html">
+            <img src="img/IsaacLogo.webp" alt="The Binding of Isaac:Rebirth Wiki">
+        </a>
+        <a href="index.html" class="logo_text">The Binding of Isaac:Rebirth Wiki</a>
+    </header>
+    <main class="main_page">
         <section>
-            <h2 id = "content1">something1</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis veniam officia natus veritatis eligendi nam sapiente at quod deserunt doloribus laudantium quidem dolorum consectetur assumenda saepe, exercitationem molestiae labore itaque.</p>
+           <h1>WELCOME TO THE BINDING OF ISAAC:REBIRTH WIKI</h1>
         </section>
         <section>
-            <h2 id = "content2">something2</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam, non doloribus porro aspernatur autem quam necessitatibus enim? Officia cumque fugiat ratione deserunt asperiores perspiciatis expedita. Pariatur quibusdam illum debitis harum?</p>
+            <h2>CONTENT</h2>
+            <a href="#">
+                <img src="img/MainPage/Achievements.webp" alt="Achivements">
+                Achivements(TODO)
+            </a>
+            <a href="#">
+                <img src="img/MainPage/Challenges.webp" alt="Challenges">
+                Challenges(TODO)
+            </a>
+            <a href="#">
+                <img src="img/MainPage/CompletionsMarks.webp" alt="Completion Marks">
+                Completion Marks(TODO)
+            </a>
+            <a href="#">
+                <img src="img/MainPage/Items.webp" alt="Items">
+                Items(TODO)
+            </a>
+            <a href="#">
+                <img src="img/Trinkets/The_Left_Hand_icon.webp" alt="Trinkets">
+                Trinkets(TODO)
+            </a>
+            <a href="#">
+                <img src="img/Characters/Isaac_appearance.webp" alt="Characters">
+                Characters(TODO)
+            </a>
+            <a href="#">
+                <img src="img/MainPage/Chapters.webp" alt="Chapters">
+                Chapters(TODO)
+            </a>
+            <a href="#">
+                <img src="img/MainPage/Rooms.webp" alt="Rooms">
+                Rooms(TODO)
+            </a>
+            <a href="#">
+                <img src="img/Transformations/Guppy_appearance.webp" alt="Transformations">
+                Transformations(TODO)
+            </a>
+            <a href="#">
+                <img src="img/MainPage/Attr.webp" alt="Attributes">
+                Attributes(TODO)
+            </a>
+            <a href="#">
+                <img src="img/MainPage/Bosses.webp" alt="Bosses">
+                Bosses(TODO)
+            </a>
+            <a href="#">
+                <img src="img/MainPage/Monsters.webp" alt="Monsters">
+                Monsters(TODO)
+            </a>
+            <a href="#">
+                <img src="img/MainPage/Pickups.webp" alt="Pickups">
+                Pickups(TODO)
+            </a>
+            <a href="#">
+                <img src="img/Greed_Donation_Machine.webp" alt="Modes">
+                Modes(TODO)
+            </a>
+            <a href="#">
+                <img src="img/MainPage/Objects.webp" alt="Objects">
+                Objects(TODO)
+            </a>
+            <a href="#">
+                <img src="img/Effects/Confusion_Effect.webp" alt="Effects">
+                Effects(TODO)
+            </a>
+            <a href="#">
+                <img src="img/MainPage/Curse.webp" alt="Curses">
+                Curses(TODO)
+            </a>
+            <a href="seeds.html">
+                <img src="img/MainPage/Seeds.webp" alt="Seeds">
+                Seeds
+            </a>
+            <a href="endings.html">
+                <img src="img/MainPage/Endings.webp" alt="Endings">
+                Endings
+            </a>
+            <a href="#">
+                <img src="img/Trinkets/Forgotten_Lullaby_icon.webp" alt="Music">
+                Music(TODO)
+            </a>
+            <a href="#">
+                <img src="img/Collectibles/The_Hourglass_icon.webp" alt="Version History">
+                Version History(TODO)
+            </a>
+            <a href="#">
+                <img src="img/Collectibles/Dataminer_icon.webp" alt="Modding">
+                Modding(TODO)
+            </a>
         </section>
         <section>
-            <h2 id = "content3">something3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio nostrum debitis voluptates optio eius omnis cumque delectus id illo libero, nobis quis doloremque illum beatae, blanditiis totam assumenda perferendis sapiente.</p>
-        </section>
-        <section>
-            <h2 id = "content4">something4</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, porro quisquam. Minima molestias, temporibus non numquam eligendi commodi unde qui eaque? Quis, sit dolorem. Maxime consectetur libero dignissimos ducimus quisquam.</p>
+            <h2>ABOUT THE GAME</h2>
+            <p>The Binding of Isaac: Rebirth is a randomly generated action RPG shooter with heavy roguelike elements. Players will accompany Isaac on a quest to escape his mother, facing off against droves of mysterious creatures, discovering secrets, and fighting fearsome bosses. Along the way, Isaac can find bizarre treasures that change his form and give him super-human abilities. But it won't be easy!
+                <br> <br>
+                Rebirth is the remake of the original game that sports a game engine that runs at 60 FPS, pixelated style artwork, polished visual effects, and a new soundtrack from Ridiculon. Oh yeah, hundreds of new rooms, synergies, and retuned enhancements by the series creator, Edmund McMillen and other developers. There are three DLCs available for Rebirth, (except in Rebirth) The Binding of Isaac: Afterbirth, (in Afterbirth † and Repentance) The Binding of Isaac: Afterbirth † and (in Repentance) The Binding of Isaac: Repentance. Did we mention the poop? </p>
         </section>
     </main>
     <footer>
-        Made by:
+        Made by: <br>
+        Maxim Kolodin <br>
+        Alimzhan Zhaparov <br>
+        Askar Toraliyev
     </footer>
 </body>
 </html>
