--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Binding of Isaac:Rebirth Wiki</title>
     <style>
         * {
             font-family: Helvetica, sans-serif;
@@ -118,11 +118,11 @@
                 <img src="img/MainPage/Curse.webp" alt="Curses">
                 Curses(TODO)
             </a>
-            <a href="seeds.html">
+            <a href="./seeds.html">
                 <img src="img/MainPage/Seeds.webp" alt="Seeds">
                 Seeds
             </a>
-            <a href="endings.html">
+            <a href="./endings.html">
                 <img src="img/MainPage/Endings.webp" alt="Endings">
                 Endings
             </a>
