--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <img src="img/MainPage/Curse.webp" alt="Curses">
                 Curses(TODO)
             </a>
-            <a href="./seeds.html">
+            <a href="./Seeds.html">
                 <img src="img/MainPage/Seeds.webp" alt="Seeds">
                 Seeds
             </a>
