--- a/endings.html
+++ b/endings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Isaac Endings</title>
+    <title>Endings</title>
     <style>
         * {
             font-family: Helvetica, sans-serif;
@@ -49,28 +49,30 @@
         <section>
             <h1>The Binding of Isaac: Endings</h1>
             <nav>
-                <a href="#ending1">Ending 1</a>
-                <a href="#ending2">Ending 2</a>
-                <a href="#ending3">Ending 3</a>
-                <a href="#ending4">Ending 4</a>
-                <a href="#ending5">Ending 5</a>
-                <a href="#ending6">Ending 6</a>
-                <a href="#ending7">Ending 7</a>
-                <a href="#ending8">Ending 8</a>
-                <a href="#ending9">Ending 9</a>
-                <a href="#ending10">Ending 10</a>
-                <a href="#ending11">Ending 11</a>
-                <a href="#ending12">Ending 12</a>
-                <a href="#ending13">Ending 13</a>
-                <a href="#ending14">Ending 14</a>
-                <a href="#ending15">Ending 15</a>
-                <a href="#ending16">Ending 16</a>
-                <a href="#ending17">Ending 17</a>
-                <a href="#ending18">Ending 18</a>
-                <a href="#ending19">Ending 19</a>
-                <a href="#ending20">Ending 20</a>
-                <a href="#ending21">Ending 21</a>
-                <a href="#finalEnding">Final Ending (Dogma &amp; The Beast Ending)</a>
+                <ul>
+                    <li><a href="#ending1">Ending 1</a></li>
+                    <li><a href="#ending2">Ending 2</a></li>
+                    <li><a href="#ending3">Ending 3</a></li>
+                    <li><a href="#ending4">Ending 4</a></li>
+                    <li><a href="#ending5">Ending 5</a></li>
+                    <li><a href="#ending6">Ending 6</a></li>
+                    <li><a href="#ending7">Ending 7</a></li>
+                    <li><a href="#ending8">Ending 8</a></li>
+                    <li><a href="#ending9">Ending 9</a></li>
+                    <li><a href="#ending10">Ending 10</a></li>
+                    <li><a href="#ending11">Ending 11</a></li>
+                    <li><a href="#ending12">Ending 12</a></li>
+                    <li><a href="#ending13">Ending 13</a></li>
+                    <li><a href="#ending14">Ending 14</a></li>
+                    <li><a href="#ending15">Ending 15</a></li>
+                    <li><a href="#ending16">Ending 16</a></li>
+                    <li><a href="#ending17">Ending 17</a></li>
+                    <li><a href="#ending18">Ending 18</a></li>
+                    <li><a href="#ending19">Ending 19</a></li>
+                    <li><a href="#ending20">Ending 20</a></li>
+                    <li><a href="#ending21">Ending 21</a></li>
+                    <li><a href="#finalEnding">Final Ending (Dogma &amp; The Beast Ending)</a></li>
+                </ul>
             </nav>
         </section>
 
