--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
                 <img src="img/Characters/Isaac_appearance.webp" alt="Characters">
                 Characters(TODO)
             </a>
-            <a href="#">
+            <a href="./chapters.html">
                 <img src="img/MainPage/Chapters.webp" alt="Chapters">
-                Chapters(TODO)
+                Chapters
             </a>
             <a href="#">
                 <img src="img/MainPage/Rooms.webp" alt="Rooms">
                 Rooms(TODO)
             </a>
-            <a href="#">
+            <a href="./transformations.html">
                 <img src="img/Transformations/Guppy_appearance.webp" alt="Transformations">
-                Transformations(TODO)
+                Transformations
             </a>
             <a href="#">
                 <img src="img/MainPage/Attr.webp" alt="Attributes">
@@ -114,9 +114,9 @@
                 <img src="img/Effects/Confusion_Effect.webp" alt="Effects">
                 Effects(TODO)
             </a>
-            <a href="#">
+            <a href="./Curses.html">
                 <img src="img/MainPage/Curse.webp" alt="Curses">
-                Curses(TODO)
+                Curses
             </a>
             <a href="./Seeds.html">
                 <img src="img/MainPage/Seeds.webp" alt="Seeds">
