--- a/transformations.html
+++ b/transformations.html
@@ -62,7 +62,7 @@
     <section>
       <h3 id="transformationSets">Transformation Sets</h3>
       <p>The following are the known transformations:</p>
-      <table border="1">
+      <table>
           <thead>
             <tr>
               <th>ID #</th>
